Fix: Add version to render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,4 @@
+version: "1"
 services:
   # Backend Service
   - type: web
@@ -16,11 +17,6 @@ services:
         sync: false
       - key: JWT_SECRET
         generateValue: true
-      - key: CORS_ORIGIN
-        fromService:
-          type: static
-          name: hospital-management-frontend
-          property: url
 
   # Frontend Service
   - type: static
